# ros1-child-safety-monitoring

./: .gitattributes  .gitignore  README.md  README_ROS1_PORT.md  check_ros1_pipeline.sh  requirements_host.txt  setup_ros_deps.sh  setup_venv.ps1  setup_venv.sh
docs/: ai_risk_model.md  environment_setup.md  live_ai_tuning.md  one_command_robot_viewer.md  output_levels.md  vit-violence-detection-reference.md
docs/superpowers/plans/: 2026-05-15-vit-violence-detection.md
docs/superpowers/specs/: 2026-05-15-vit-violence-detection-integration-design.md
scripts/: build_ros1_workspace.sh  check_existing_dependencies.sh  check_ros1_pipeline.sh  docker_setup_ros1_workspace.sh  log_features.sh  run_ai_robot_demo.sh  run_ai_robot_stream_with_viewer.sh  run_ai_scenario_demo.sh  run_laptop_stream_demo.sh  run_overlay_viewer.sh  run_robot_demo.sh  run_robot_stream_with_viewer.sh  run_ros1_docker_dev.sh  setup_host_venv.sh  setup_host_venv_windows.bat  setup_host_venv_windows.ps1  setup_ros1_python_deps.sh  train_seed_risk_model.sh
src/child_safety_monitoring/: CMakeLists.txt  package.xml  requirements_ros1.txt  requirements_torch_cpu_optional.txt  setup.py
src/child_safety_monitoring/config/: detection_params.yaml
src/child_safety_monitoring/launch/: ai_jupiter_robot_camera_demo.launch  ai_scenario_demo.launch  ai_shared_pipeline.launch  ai_stream_demo.launch  ai_stream_demo_with_viewer.launch  feature_logger.launch  jupiter_robot_camera_demo.launch  scenario_demo.launch  stream_demo.launch  stream_demo_with_viewer.launch  view_overlay.launch
src/child_safety_monitoring/scripts/: ai_decision_node.py  alarm_node.py  alert_console_node.py  browser_stream_viewer_node.py  cctv_stream_node.py  decision_node.py  feature_logger_node.py  host_webcam_streamer.py  interaction_analyzer_node.py  pose_estimator_node.py  risk_model_node.py  scenario_simulator_node.py  tracker_node.py  train_risk_model.py  violence_detector_node.py
src/child_safety_monitoring/src/child_safety_monitoring/core/: centroid_tracker.py  geometry.py  keypoints.py  scoring.py
src/child_safety_monitoring/tests/: test_decision_node.py  test_violence_detector_node.py
src/child_safety_msgs/: CMakeLists.txt  package.xml
src/child_safety_msgs/msg/: InteractionFeatures.msg  PersonPose2D.msg  PersonPose2DArray.msg  RiskPrediction.msg  SuspicionEvent.msg
