cmake_minimum_required(VERSION 3.0.2)
project(child_safety_msgs)

find_package(catkin REQUIRED COMPONENTS
  message_generation
  std_msgs
  geometry_msgs
  sensor_msgs
)

add_message_files(
  FILES
  PersonPose2D.msg
  PersonPose2DArray.msg
  InteractionFeatures.msg
  SuspicionEvent.msg
  RiskPrediction.msg
)

generate_messages(
  DEPENDENCIES
  std_msgs
  geometry_msgs
  sensor_msgs
)

catkin_package(
  CATKIN_DEPENDS message_runtime std_msgs geometry_msgs sensor_msgs
)
