<?xml version="1.0"?>
<package format="2">
  <name>child_safety_msgs</name>
  <version>0.1.0</version>
  <description>Custom ROS 1 messages for child safety monitoring prototype.</description>
  <maintainer email="student@example.com">Student Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
